--- a/nuget.config
+++ b/nuget.config
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<configuration> 
-  <packageSources>
-    <add key="myget/mindbox-private" value="https://mindbox.myget.org/F/mindbox-private/auth/322b5307-d66a-4441-931b-339359d5b7bd/api/v3/index.json" />
-  </packageSources>
-  <activePackageSource>
-    <add key="All" value="(Aggregate source)" />
-  </activePackageSource>
+<configuration>
+  <packageSourceMapping>
+    <packageSource key="nuget.org">
+      <package pattern="Mindbox.Analyzers.V3" />
+      <package pattern="Mindbox.Data.Linq" />
+      <package pattern="Mindbox.DiagnosticContext*" />
+      <package pattern="Mindbox.ExceptionsHandling*" />
+      <package pattern="Mindbox.Expressions" />
+      <package pattern="Mindbox.I18n*" />
+      <package pattern="Mindbox.Quokka*" />
+      <package pattern="Mindbox.WorkingCalendar" />
+      <package pattern="*" />
+    </packageSource>
+    <packageSource key="github">
+      <package pattern="Mindbox.*" />
+      <package pattern="WebSiteScanner" />
+    </packageSource>
+  </packageSourceMapping>
 </configuration>
