--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,15 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
 
       - name: Setup .NET 6
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 6.0.x
 
       - name: Install dependencies
-        run: dotnet restore
+        run: |
+          dotnet nuget update source github --username USERNAME --password ${{ secrets.GH_FULL_TOKEN }} --store-password-in-clear-text
+          dotnet restore
 
       - name: Build
         run: dotnet build ./Mindbox.Analyzers.sln --configuration Release --no-restore
