--- a/nuget.config
+++ b/nuget.config
@@ -17,4 +17,7 @@
       <package pattern="WebSiteScanner" />
     </packageSource>
   </packageSourceMapping>
+  <packageSources>
+    <add key="github" value="https://nuget.pkg.github.com/mindbox-cloud/index.json" />
+  </packageSources>
 </configuration>
