--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -7,16 +7,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v1
 
       - name: Setup .NET 6
-        uses: actions/setup-dotnet@v3
+        uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 6.0.x
 
       - name: Install dependencies
         run: |
-          dotnet nuget update source github --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
+          dotnet nuget update source github --username USERNAME --password ${{ secrets.GH_FULL_TOKEN }} --store-password-in-clear-text
           dotnet restore          
 
       - name: Build
