--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -15,9 +15,7 @@ jobs:
           dotnet-version: 6.0.x
 
       - name: Install dependencies
-        run: |
-          dotnet nuget update source github --username USERNAME --password ${{ secrets.GH_FULL_TOKEN }} --store-password-in-clear-text
-          dotnet restore          
+        run: dotnet restore          
 
       - name: Build
         run: dotnet build ./Mindbox.Analyzers.sln --configuration Release --no-restore
